--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mastermind (2.25.38-col) trusty; urgency=medium
+
+  * Fixed couple check
+
+ -- Vladimir Nikulichev <saturnus@yandex-team.ru>  Wed, 25 Nov 2015 16:16:07 +0300
+
 mastermind (2.25.37-col) trusty; urgency=medium
 
   * Fixed miss of job
