--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-mastermind (2.28.19~cocainev12-1) trusty; urgency=medium
+mastermind (2.28.19-cocainev12-1) trusty; urgency=medium
 
   * Update workers to run on cocaine v12
 
